TestCases/errors/commentnotclosed4.alan
"hi there; {} }}}}" 
however.lunch = no {no clue
